--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/pg": "^8.15.6",
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "multer": "^2.0.2",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.20",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.8.9",
     "csv-writer": "^1.6.0",
     "ts-node-dev": "^2.0.0",
